# RobustSHAP

./: .gitignore  LICENSE  README.md  bootstrap.py  cifar10.ipynb  cifar10_patch_analysis.py  cifar10_vit_base.ipynb  distribution_estimation.py  environment.yml  fraud_feature_selection_comparison.ipynb  fraud_kernel.ipynb  golub_feature_selection_comparison.ipynb  golub_kernel.ipynb  madelon_feature_selection_comparison copy.ipynb  model_wrapper.py  musk2_feature_selection_comparison.ipynb  performance_comparison.py  plotting.py  pyproject.toml  simulation_simple.ipynb  uji_feature_selection_comparison.ipynb
.github/workflows/: publish.yml  tests.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: gasoline_y.csv
examples/: quickstart.py
research/: .gitignore  README.md  bootstrap.py  environment.yml  musk2_feature_selection_comparison.ipynb  uji_feature_selection_comparison.ipynb
research/catboost_info/: learn_error.tsv
research/catboost_info/learn/: events.out.tfevents
src/roshap/: __init__.py  _utils.py  api.py  bootstrap.py  distributions.py  models.py  plotting.py  ranking.py
tests/: conftest.py  test_api.py  test_bootstrap.py  test_distributions.py  test_models.py  test_plotting.py  test_ranking.py
