[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roshap"
version = "0.1.0"
description = "Robust SHAP feature importance: bootstrap SHAP with zero-inflated density estimation and robust ranking"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Lanxin Xiang", email = "lxiang2299@gmail.com" }]
keywords = ["shap", "feature-importance", "bootstrap", "explainability", "interpretability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "joblib>=1.2",
    "tqdm>=4.64",
    "cloudpickle>=2.0",
    "shap>=0.44",
    "xgboost>=1.7",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0"]
catboost = ["catboost>=1.2"]
torch = ["torch>=2.0"]
tensorflow = ["tensorflow>=2.13"]
smote = ["imbalanced-learn>=0.11"]
all = ["roshap[lightgbm,catboost,torch,tensorflow,smote]"]
dev = ["pytest>=7.0", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/Lanxin-Xiang/RobustSHAP"
Repository = "https://github.com/Lanxin-Xiang/RobustSHAP"
Issues = "https://github.com/Lanxin-Xiang/RobustSHAP/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
